Fixed Scrollbars allignment inaccuracies + added support for Bezier Curves on multiple scroll-animations

--- a/css/universalsmoothscroll.css
+++ b/css/universalsmoothscroll.css
@@ -9,10 +9,31 @@
   user-drag: none;
   -webkit-user-drag: none;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+body::-webkit-scrollbar {
+  //display: none;
+}
+
 html, body {
   margin: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
+}
+
+html {
+  overflow: hidden;
+}
+
+body {
+  overflow: scroll;
 }
 
 button {
@@ -26,9 +47,6 @@ button {
   height: 100px;
   display: flex;
   justify-content: center;
-  background: rgba(50,50,50,0.5);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
 }
 
 ul {
@@ -42,9 +60,8 @@ ul {
 }
 
 li {
-  height: 100%;
   width: 100%;
-  border: 1px solid black;
+  height: 100%;
 }
 
 li > a {
@@ -56,11 +73,45 @@ li > a {
   justify-content: center;
   align-items: center;
   background: rgba(0,0,0,0.5);
+  transition: 0.3s;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 
-#buttonSection {
+li > a:hover {
+  background: rgba(0,0,0,0.6);
+}
+
+#stopScrollingButtonsSection {
+  z-index: 2;
+  position: fixed;
+  width: 15vmin;
+  height: 200px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  top: calc(50% - 200px / 2);
+  right: 17px;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+
+#stopScrollingButtonsSection > button {
+  width: 100%;
+  height: 100%;
+  color: white;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0,0,0,0.5);
+  transition: 0.3s;
+}
+
+#stopScrollingButtonsSection > button:hover {
+  background: rgba(0,0,0,0.6);
 }
 
 .page {
@@ -69,8 +120,19 @@ li > a {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
 }
 
+.sections-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.scrollerSections {
+  overflow: scroll;
+}
 
 #section1,
 #section11,
@@ -79,10 +141,10 @@ li > a {
 }
 
 #xScroller {
-  display: flex;
+  position: relative;
   width: 70vmin;
   height: 70vmin;
-  overflow-x: scroll;
+  display: flex;
 }
 
 .listItem {
@@ -94,12 +156,13 @@ li > a {
 
 #xScroller > button {
   z-index: 0;
-  color:black;
   position: absolute;
+  color:white;
   font-size: 3rem;
   height: 70vmin;
   width: 20vmin;
-  background: rgba(255,255,255,0.4);
+  border: none;
+  background: rgba(0,0,0,0.5);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
@@ -114,6 +177,10 @@ li > a {
   transform: translateX(-100%);
 }
 
+#xScrollerSection {
+    display: flex;
+}
+
 #section2,
 #section21,
 #section22 {
@@ -121,22 +188,23 @@ li > a {
 }
 
 #yScroller {
-  display: flex;
-  flex-direction: column;
+  position: relative;
   width: 70vmin;
   height: 70vmin;
-  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
 
 #yScroller > button {
   z-index: 0;
-  color:black;
-  text-align: center;
   position: absolute;
+  color:white;
+  text-align: center;
   font-size: 3rem;
   height: 20vmin;
   width: 70vmin;
-  background: rgba(255,255,255,0.4);
+  border: none;
+  background: rgba(0,0,0,0.5);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
@@ -161,4 +229,15 @@ li > a {
 #section41,
 #section42 {
   background: linear-gradient(45deg, rgba(0,255,244,1) 0%, rgba(0,255,29,1) 100%);
+}
+
+@media only screen and (max-width: 800px) {
+  #stopScrollingButtonsSection {
+    width: 200px;
+    height: 15vmin;
+    flex-direction: row;
+    justify-content: center;
+    top: calc(90% - 15vmin / 2);
+    right: calc(50% - 100px);
+  }
 }
